--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>ProEducation!</title>
   <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/3.0.0/uicons-regular-rounded/css/uicons-regular-rounded.css'>
   <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/3.0.0/uicons-brands/css/uicons-brands.css'>
+  <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -112,4 +113,6 @@ Our mission is to make quality education accessible, engaging, and impactful for
     </div>
   </footer>
   <script src="script.js"></script>
-</body>  
+</body> 
+</html>
+
